# mayim

./: .coveragerc  .gitignore  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  build_api_docs.py  index.html  package.json  pyproject.toml  setup.cfg  tox.ini
.github/: FUNDING.yml
.github/workflows/: build-docs.yml  python-package.yml  python-publish.yml
api/: index.html  mayim.base.executor.html  mayim.base.html  mayim.base.hydrator.html  mayim.base.interface.html  mayim.base.query.html  mayim.convert.html  mayim.decorator.html  mayim.exception.html  mayim.extension.html  mayim.extension.quart_extension.html  mayim.extension.sanic_extension.html  mayim.extension.starlette_extension.html  mayim.extension.statistics.html  mayim.html  mayim.lazy.interface.html  mayim.mayim.html  mayim.registry.html  mayim.sql.executor.html  mayim.sql.mysql.executor.html  mayim.sql.mysql.interface.html  mayim.sql.mysql.query.html  mayim.sql.postgres.executor.html  mayim.sql.postgres.interface.html  mayim.sql.postgres.query.html  mayim.sql.query.html  mayim.sql.sqlite.executor.html  mayim.sql.sqlite.interface.html  mayim.sql.sqlite.query.html
assets/css/: 0.styles.3308f443.css
assets/js/: 10.eb63af45.js  11.e0b36719.js  12.df4d92e0.js  13.06d34adf.js  14.bc3a923d.js  15.0760b24c.js  16.7d4483e6.js  17.6bfa74e2.js  18.3e4481d5.js  19.d2c6c571.js  2.6ea905c0.js  20.2333b8b7.js  21.8dd13b59.js  22.b7981469.js  23.b0d4b118.js  24.301c21fb.js  25.a51571d3.js  26.56e12627.js  27.812b6fc0.js  28.4c94a015.js  29.b85e31c3.js  3.9e3ae2d0.js  30.dbbe21f1.js  31.b20a5883.js  32.d0d44b83.js  33.aed9b532.js  34.9b7d7178.js  35.f7882c1a.js  36.a910d967.js  37.caf22407.js  38.1b72d911.js  39.cc35ef01.js  4.17cd9af5.js  40.cb746fdc.js  41.d3057ea7.js  42.0a61bf76.js  43.c780887d.js  44.9ff53f52.js  45.ff3059f2.js  46.f58d09fa.js  (+7 more)
docs/: package.json
docs/src/: index.md
docs/src/.vuepress/: apiPages.js  config.js
docs/src/guide/: README.md  basics.md  executors.md  extensions.md  hydrators.md  install.md  pydantic.md  simple.md  sqlfiles.md
examples/: docker-compose.yml
examples/basic/: app.py
examples/basic/queries/: select_city_by_id.sql
examples/custom_hydrator/: app.py
examples/flat/: app.py  mayim_all_cities.sql
guide/: basics.html  executors.html  extensions.html  hydrators.html  index.html  install.html  pydantic.html  simple.html  sqlfiles.html
src/mayim/: __init__.py  convert.py  decorator.py  exception.py  executor.py  hydrator.py  mayim.py  query.py  registry.py  transaction.py
src/mayim/base/: __init__.py  (+4 more)
tests/: conftest.py  test_connect.py  test_convert.py  test_executor.py  test_hydrator.py  test_init.py  test_sql_loading.py  test_transaction.py  test_transaction_advanced.py  test_transaction_failures.py  test_transaction_new_api.py
tests/app/: model.py
tests/queries/: select_item.sql  select_items.sql  select_items_numbered.sql
(+60 files in other folders)
