[build-system]
requires = [
    "setuptools", "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
target-version = ['py38', 'py39', 'py310']

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
line_length = 79
multi_line_output = 3
include_trailing_comma = true


[[tool.mypy.overrides]]
module = [
    "aiosqlite.*",
    "asyncmy.*",
    "psycopg_pool.*",
    "psycopg.*",
    "quart.*",
    "sanic_ext.*",
    "sanic.*",
    "starlette.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=src --cov-append --cov-report term-missing"
