[metadata]
name = mayim
version = 0.1.0
description = Object relationship hydrator
# long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
# keywords = one, two
# license = BSD 3-Clause License
classifiers =
    # License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
zip_safe = False
install_requires =
    asyncpg
package_dir=
    =src
packages = find:

[options.packages.find]
where=src
