[metadata]
name = mayim
version = 0.1.0
description = The NOT ORM hydraroe
long_description = file: README.md
long_description_content_type = text/markdown
keywords = orm
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
package_dir=
    =src
packages = find:

[options.extras_require]
test =
    coverage
    pytest
    pytest-cov
    pytest-asyncio
    tox
dev =
    %(test)s
    black
    flake8
    isort
    mypy
postgres =
    psycopg
    psycopg_pool
[options.packages.find]
where=src
