[metadata]
name = mayim
version = 1.3.1
description = The NOT ORM hydrator
long_description = file: README.md
long_description_content_type = text/markdown
keywords = orm
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
zip_safe = False
package_dir=
    =src
packages = find:

[options.extras_require]
docs =
    pydoc-markdown
test =
    coverage
    pytest
    pytest-cov
    pytest-asyncio
    tox
dev =
    %(test)s
    black
    flake8
    isort
    mypy
postgres =
    psycopg
    psycopg_pool
mysql =
    asyncmy
sqlite =
    aiosqlite
[options.packages.find]
where=src
